--- a/social_network/settings_app/templates/albums/albums.html
+++ b/social_network/settings_app/templates/albums/albums.html
@@ -12,8 +12,9 @@
 {% block content %}
     <div class="center">
         <div class="settings-links">
-            <a href="{% url 'user_settings' %}" class="link one">Особиста інформація</a>
+            <a href="{% url 'user_settings' %}" class="link one">Головна</a>
             <a href="{% url 'albums' %}" class="link two">Альбоми</a>
+            <a href="{% url 'friends' %}" class = "link one">Друзі</a>
         </div>
 
         <div class="main-card">
