--- a/social_network/settings_app/static/albums/css/albums.css
+++ b/social_network/settings_app/static/albums/css/albums.css
@@ -34,6 +34,7 @@ body{
 /* font-size - 16px */
 .link{
     font-size: calc(0.5vw + 0.7vh);
+    margin-top: calc(0.4vw + 0.6vh); 
 }
 
 a.link.one{
