--- a/social_network/friends/templates/friends/friends.html
+++ b/social_network/friends/templates/friends/friends.html
@@ -13,9 +13,10 @@
 {% block content %}
     <div class="center">
         <div class="settings-links">
-            <a href="{% url 'user_settings' %}" class="link two">Головна</a>
-            <a href="{% url 'albums' %}" class="link two">Альбоми</a>   
-            <a href="{% url 'friends' %}" class = "link one">Друзі</a>
+            <a href="{% url 'main_friends' %}" class="link one">Головна</a>
+            <a class="link two">Запити</a>   
+            <a class = "link two">Рекомендації</a>
+            <a class = "link two-friend">Всі друзі</a>
         </div>
         <div class = "all-frames">
             <div class = "request-card">
