--- a/social_network/publications/templates/my_publications/index.html
+++ b/social_network/publications/templates/my_publications/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_header_main.html' %}
 {% load static%}
 
 {% block title %}
@@ -6,38 +6,7 @@
 {% endblock %}
 
 {% block link %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% endblock %}
-
-{% block hat %}
-    <div class = "urls-frame">
-        <div class = "urls">
-            <div class = "url">
-                <img src="{% static 'images/icons/house.png'%}" alt="">
-                <a href = "{% url 'main' %}">Головна</a>
-            </div>
-            <div class = "main url">
-                <img src="{% static 'images/icons/post.png' %}" alt="">
-                <a href = "{% url 'my_pubs' %}">Мої публікації</a>
-            </div>
-            <div class = "url">
-                <img src="{% static 'images/icons/friends.png' %}" alt="">
-                <a>Друзі</a>
-            </div>
-            <div class = "url">
-                <img src="{% static 'images/icons/chats.png' %}" alt="">
-                <a>Чати</a>
-            </div>
-            <div class = "url">
-                <img src="{% static 'images/icons/settings.png' %}" alt="">
-                <a href="{% url 'user_settings' %}">Налаштування</a>
-            </div>
-        </div>
-        <div class = "button-exit">
-            <img src="{% static 'images/icons/exit.png'%}" alt="">
-            <a class = "exit">Вихід</a>
-        </div>
-    </div>
+    <link rel="stylesheet" href="{% static 'css/my_publications/style.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -49,7 +18,7 @@
                     <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
                 </div>
                 <div class = "nick-and-tag">
-                    <h2 class = "name">{{request.user.username}}</h2>
+                    <h2 class = "name">{{request.user.first_name}} {{request.user.last_name}}</h2>
                     <h3 class = "tag">@{{request.user.username}}</h3>
                 </div>
                 <div class = "subscribers" >
@@ -240,7 +209,7 @@
                                     <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
                                 </div>  
                                 <div class = "redacting redacting-button">
-                                    <img src="{% static 'images/icons/redact.png'%}" alt="">
+                                    <img class = "image-redact" src="{% static 'images/icons/redact.png'%}" alt="">
                                     <form action="">
                                         <a class = "redacting-title">Редагувати допис</a>
                                     </form>
@@ -248,7 +217,7 @@
                                 <div class = "line"></div>  
                                 <div class = "redacting deleting-button">
                                     
-                                    <img src="{% static 'images/icons/delete.png'%}" alt="">
+                                    <img class = "image-redact" src="{% static 'images/icons/delete.png'%}" alt="">
                                     <form method = "post" action="{% url 'delete' post.pk%}">
                                         {% csrf_token %}
                                         <button type = "submit"  class = "redacting-title">Видалити публікацію</button>
