--- a/social_network/registration/static/registration/css/style.css
+++ b/social_network/registration/static/registration/css/style.css
@@ -98,8 +98,31 @@ button:hover{
 }
 
 input{
+    display: flex;
+    flex-direction: column;
+    width: calc(9.5vw + 19.6vh);
     height: calc(1.4vw + 2vh);
     border-radius: calc(0.3vw + 0.4vh);
+    color: rgba(129, 129, 141, 1);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh);
+    border: calc(0.03vw + 0.05vh) black solid;
+    font-size: calc(0.5vw + 0.7vh);
+}
+.field-container{
+    display: flex;
+}
+.eye-img{
+    width: calc(0.7vw + 1vh);
+    height: calc(0.7vw + 1vh);
+    position: absolute;
+    left: calc(12vw + 17.5vh);
+    margin-top: calc(0.4vw + 0.5vh);
+}
+.eye-img:hover{
+    cursor: pointer;
+}
+input::placeholder{
+    color: rgba(129, 129, 141, 1);
 }
 a{
     all: unset;
@@ -113,11 +136,6 @@ label{
     font-weight: 400;
 }
 
-input{
-    font-size: calc(0.5vw + 0.7vh);
-    border: calc(0.03vw + 0.05vh) black solid;
-    
-}
 
 ::placeholder{
     font-size: calc(0.5vw + 0.7vh);
