--- a/social_network/registration/templates/authorization/index.html
+++ b/social_network/registration/templates/authorization/index.html
@@ -23,7 +23,10 @@
                         {% for field in form %}
                             <div class = "input">
                                 {{ field.label_tag }}
-                                {{ field }}
+                                <div class = "field-container">
+                                    {{ field }}
+                                    <img class = "eye-img"src="{% static 'images/icons/eye.png'%}" id = "{{ field.auto_id }}" alt="">
+                                </div>
                                 {{ field.errors }}
                             </div>
                         {% endfor %}
@@ -45,8 +48,6 @@
         </div>
     </div>
 {% endblock %}
-
-
-
-
-
+{% block script %}
+    <script src = "{% static 'registration/js/script.js'%}"></script>
+{% endblock %}
