--- a/social_network/publications/static/css/my_publications/style.css
+++ b/social_network/publications/static/css/my_publications/style.css
@@ -528,7 +528,8 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: calc(2.1vh + 1.5vw);
 }
 
-.cross-img{
+.cross-img-post{
+    text-align: right;
     margin-left: calc(23.1vw + 32.6vh);
 }
 .cross{
@@ -668,6 +669,10 @@ textarea{
     font-size: calc(1.2vw + 1.6vh);
     font-weight: 500;
 
+}
+.deleting-title{
+    all: unset;
+    font-size: calc(0.5vw + 0.8vh);
 }
 .redacting{
     display: flex;
