--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -105,12 +105,41 @@ p{
     justify-content:space-evenly;
     color: #543C52;
 }
+.save-info-button{
+    width: calc(3.75vw + 5.3vh);
+    height: calc(1.3vw + 1.9vh);
+    background-color: #FFFFFF;
+    border: calc(0.03vw + 0.05vh) #543C52 solid;
+    border-radius: calc(6.5vw + 9.3vh);
+    font-size: calc(0.5vw + 0.7vh);
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
+    color: #543C52;
+}
 
 .edit-img{
     width: calc(0.5vw + 0.7vh);
     height: calc(0.7vh + 0.5vw);
 }
-
+.hidden{
+    display: none;
+    visibility: hidden;
+}
+.screen{
+    position: absolute;
+    margin-right: calc(0.5vw + 1vh);
+    width: calc(16vw + 45.2vh);
+    height: calc(10vw + 24vh);
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color: #ffffff5e;
+    border-radius: calc(0.3vw + 0.5vh);
+    border: none;
+    gap: calc(0.8vw + 1.1vh);
+}
 .main-profile{
     width: calc(31vw + 43.7vh);
     height: calc(8.5vh + 6vw);
