--- a/social_network/templates/base_header_main.html
+++ b/social_network/templates/base_header_main.html
@@ -15,26 +15,26 @@
                     <img class = "logo" src="{% static 'images/icons/logo.png'%}" alt="" class="image-header">
                     <div class = "urls-frame">
                         <div class = "urls">
-                            <div class = "main url">
+                            <a href = "{% url 'main' %}" class = "main url">
                                 <img src="{% static 'images/icons/house.png'%}" alt="" class="image-header">
-                                <a href = "{% url 'main' %}">Головна</a>
-                            </div>
-                            <div class = "url posts-url">
+                                <span class = "span-url">Головна</span>
+                            </a>
+                            <a href = "{% url 'my_pubs' %}" class = "url posts-url">
                                 <img src="{% static 'images/icons/post.png' %}" alt="" class="image-header">
-                                <a href = "{% url 'my_pubs' %}">Мої публікації</a>
-                            </div>
-                            <div class = "url friends">
+                                <span class = "span-url" >Мої публікації</span>
+                            </a>
+                            <a href = "{% url 'main_friends'%}" class = "url friends">
                                 <img src="{% static 'images/friends.png' %}" alt="" class="image-header friend">
-                                <a href = "{% url 'main_friends'%}" >Друзі</a>
-                            </div>
-                            <div class = "url chats">
+                                <span class = "span-url" >Друзі</span>
+                            </a>
+                            <a href = "{% url 'all_chats'%}" class = "url chats">
                                 <img src="{% static 'images/icons/chats.png' %}" alt="" class="image-header">
-                                <a>Чати</a>
-                            </div>
-                            <div class = "url settings">
+                                <span class = "span-url">Чати</span>
+                            </a>
+                            <a href="{% url 'user_settings' %}" class = "url settings">
                                 <img src="{% static 'images/icons/settings.png' %}" alt="" class="image-header">
-                                <a href="{% url 'user_settings' %}">Налаштування</a>
-                            </div>
+                                <span class = "span-url">Налаштування</span>
+                            </a>
                         </div>
                         <form action="{% url 'logout' %}" method = "post">
                             {% csrf_token%}
